Update whitelist naming

--- a/ozf/ud_base.cfg
+++ b/ozf/ud_base.cfg
@@ -15,7 +15,7 @@ tf_tournament_classlimit_spy                 "0"
 // MP CVARs \\
 
 mp_bonusroundtime                            "0"
-mp_tournament_whitelist                      "cfg/ozf/qix_ud_whitelist.txt"
+mp_tournament_whitelist                      "cfg/ozf/ud_whitelist.txt"
 
 // TF2 Comp Fixes CVARS \\
 
