Adjusted directory path

--- a/6s_golden.cfg
+++ b/6s_golden.cfg
@@ -2,7 +2,7 @@
 
 // Exec Base Sixes Config \\
 
-exec                          "ozf/6s_base.cfg"
+exec                          "tf2_comp_ozf/6s_base.cfg"
 
 // MP CVARs \\
 
