--- a/ud_ultiduo.cfg
+++ b/ud_ultiduo.cfg
@@ -2,7 +2,7 @@
 
 // Exec Base Ultiduo Config \\
 
-exec                          "ozf/ud_base.cfg"
+exec                          "tf2_comp_ozf/ud_base.cfg"
 
 // MP CVARs \\
 
