--- a/6s_base.cfg
+++ b/6s_base.cfg
@@ -15,7 +15,7 @@ tf_tournament_classlimit_spy                 "1"
 // MP CVARs \\
 
 mp_bonusroundtime                            "0"
-mp_tournament_whitelist                      "cfg/ozf/6s_whitelist.txt"
+mp_tournament_whitelist                      "cfg/tf2_comp_ozf/6s_whitelist.txt"
 
 // TF2 Comp Fixes CVARs \\
 
