--- a/hl_standard.cfg
+++ b/hl_standard.cfg
@@ -2,7 +2,7 @@
 
 // Exec Base Highlander Config \\
 
-exec                          "ozf/hl_base.cfg"
+exec                          "tf2_comp_ozf/hl_base.cfg"
 
 // MP CVARs \\
 
