Added Valve's own fixes and removed comp fixes Valve added

--- a/hl_base.cfg
+++ b/hl_base.cfg
@@ -17,9 +17,13 @@ tf_tournament_classlimit_spy                 "1"
 mp_bonusroundtime                            "0"
 mp_tournament_whitelist                      "tf2_comp_ozf/ozf/hl_whitelist.txt"
 
+// Valve Fixes CVARs \\
+
+tf_fall_damage_disablespread 				 "1"
+
 // TF2 Comp Fixes CVARs \\
 
-sm_deterministic_fall_damage                 "1"
+sm_deterministic_fall_damage                 "0"
 sm_empty_active_ubercharges_when_dropped     "1"
 sm_fix_ghost_crossbow_bolts                  "1"
 sm_fix_post_pause_state                      "0"
@@ -27,7 +31,7 @@ sm_fix_reflect_self_damage                   "0"
 sm_fix_slope_bug                             "1"
 sm_fix_sticky_delay                          "1"
 sm_inhibit_extendfreeze                      "1"
-sm_override_pipe_size                        "4"
+sm_override_pipe_size                        "0"
 sm_projectiles_collide_with_cylinders        "0"
 sm_projectiles_ignore_teammates              "1"
 sm_remove_halloween_souls                    "1"
