ozfortress Experimental Cup 1

--- a/ec_base.cfg
+++ b/ec_base.cfg
@@ -1,4 +1,4 @@
-// --- // Sixes Base Configuration \\ --- \\
+// --- // Sixes Experimental Cup Base Configuration \\ --- \\
 
 // Class Restriction CVARs \\
 
@@ -15,7 +15,7 @@ tf_tournament_classlimit_spy                 "1"
 // MP CVARs \\
 
 mp_bonusroundtime                            "0"
-mp_tournament_whitelist                      "cfg/tf2_comp_ozf/6s_whitelist.txt"
+mp_tournament_whitelist                      "cfg/tf2_comp_ozf/ec_whitelist.txt"
 
 // TF2 Comp Fixes CVARs \\
 
@@ -45,7 +45,7 @@ sm_tournament_end_ignores_whitelist          "1"
 
 // TF2 Improved Timers \\
 
-mp_timelimit_improved                        "0"
-round_time_override                          "-1"
+mp_timelimit_improved                        "1"
+round_time_override                          "300"
 
-// --- // Sixes Base Configuration \\ --- \\
+// --- // Sixes Experimental Cup Base Configuration \\ --- \\
